client/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@200;300;400;600;700&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Nunito", sans-serif;
  font-family: "Poppins", sans-serif;
}

.main-grid {
  @apply grid h-screen md:grid-cols-layoutMd xl:grid-cols-layoutLg;
}

.main-column-layout {
  @apply overflow-auto bg-gray-200 px-6 py-6 md:col-start-3 md:col-end-4 md:justify-stretch;
}

.btn {
  @apply cursor-pointer rounded-full px-3 py-2 text-sm font-bold uppercase tracking-wider;
}

.card {
  @apply cursor-pointer rounded-xl shadow-slate-950 transition duration-300 ease-out hover:scale-95 hover:shadow-xl;
}

dialog::backdrop {
  background-color: salmon;
}

/* ------------------------------------- */
/* CUSTOM SCROLL BAR */
/* width */
::-webkit-scrollbar {
  width: 8px;
  scroll-behavior: smooth;
}

::-webkit-scrollbar-track {
  background: #bbcbd9;
  border-radius: 50%;
}

::-webkit-scrollbar-thumb {
  background: rgb(8 47 73);
  border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
  background: #6c93ae;
}
/* ------------------------------------- */

